--- a/package.json
+++ b/package.json
@@ -18,15 +18,17 @@
     "@babel/preset-typescript": "^7.10.4",
     "@types/jest": "^26.0.4",
     "babel-plugin-module-resolver": "^4.0.0",
-    "eslint": "^5.16.0",
     "jest": "^26.1.0",
     "ts-jest": "^26.1.2",
     "ts-node-dev": "^1.0.0-pre.51",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.9.6"
+    "typescript": "^3.9.6",
+    "@typescript-eslint/eslint-plugin": "^3.1.0",
+    "@typescript-eslint/parser": "^3.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-import-helpers": "^1.0.2"
   },
-  "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^3.6.1",
-    "eslint-config-airbnb-base": "^14.2.0"
-  }
+  "dependencies": {}
 }
