--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,25 @@
-node_modules
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build
 dist
 
+# Dependency directories
+node_modules/
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# Env files
 .env
+
+# Temporary files
 tmp/*
 !tmp/.gitkeep
