--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/node": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
+    "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.7",
     "@types/jest": "^26.0.4",
@@ -36,6 +37,7 @@
     "typescript": "^3.9.6"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
